# skypoint-claude-code-assessment

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users.py  002_create_jobs_applications.py  003_resumes_and_profile_columns.py  004_add_embeddings.py  005_invite.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: analytics.py  applications.py  auth.py  candidates.py  invites.py  jobs.py  matching.py  resumes.py
backend/app/core/: config.py  deps.py  exceptions.py  security.py
backend/app/db/: base.py  seed.py  session.py
backend/app/models/: __init__.py  application.py  candidate_profile.py  company.py  invite.py  job.py  resume.py  user.py
backend/app/schemas/: applications.py  auth.py  invites.py  jobs.py  matching.py  resumes.py
backend/app/services/: auth_service.py  email_service.py  embedding_service.py  matching_service.py  resume_parser.py
backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_candidates.py  test_invites.py  test_jobs.py  test_matching.py  test_rbac.py  test_resumes.py
docs/: api.md  architecture.md
frontend/: Dockerfile  next.config.mjs  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(candidate)/: layout.tsx
frontend/src/app/(candidate)/candidate/applications/: page.tsx
frontend/src/app/(candidate)/candidate/dashboard/: page.tsx
frontend/src/app/(candidate)/candidate/jobs/: page.tsx
frontend/src/app/(candidate)/candidate/profile/: page.tsx
frontend/src/app/(candidate)/dashboard/: page.tsx
frontend/src/app/(hr)/: layout.tsx
frontend/src/app/(hr)/hr/analytics/: page.tsx
frontend/src/app/(hr)/hr/candidates/: page.tsx
frontend/src/app/(hr)/hr/dashboard/: page.tsx
frontend/src/app/(hr)/hr/jobs/: page.tsx
frontend/src/app/(hr)/hr/jobs/new/: page.tsx
frontend/src/app/(hr)/hr/pipeline/: page.tsx
frontend/src/components/: providers.tsx
frontend/src/components/jobs/: job-card.tsx  match-score-badge.tsx  skill-tag.tsx
frontend/src/components/shared/: nav-candidate.tsx  nav-hr.tsx
frontend/src/components/ui/: badge.tsx  button.tsx
frontend/src/lib/: api.ts  auth.ts  schemas.ts
frontend/src/stores/: auth.ts
frontend/tests/: login-form.test.tsx  register-form.test.tsx  smart-search.test.tsx
