[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talentbridge-api"
version = "0.1.0"
description = "TalentBridge — intelligent job portal API"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi==0.109.0",
    "uvicorn[standard]==0.29.0",

    # Database
    "sqlalchemy[asyncio]==2.0.30",
    "asyncpg==0.29.0",
    "alembic>=1.13.0",
    "pgvector==0.2.5",

    # Pydantic / settings
    "pydantic[email]==2.7.1",
    "pydantic-settings==2.2.1",

    # Auth
    # bcrypt pinned to <4.0: passlib 1.7.4 breaks with bcrypt 4.x (__about__ removed,
    # and >72-byte password now raises ValueError instead of silently truncating)
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==3.2.2",

    # Rate limiting
    "slowapi==0.1.9",

    # Redis
    "redis==5.0.4",

    # Email
    "aiosmtplib==3.0.1",
    "jinja2==3.1.4",

    # File parsing
    "pdfplumber==0.11.0",
    "python-docx==1.1.2",
    "python-multipart==0.0.9",

    # NLP / ML
    # torch pinned to 2.2.2: newer versions (2.11+) made cuda-toolkit a hard dep
    # which pulls multi-GB NVIDIA packages even on CPU-only builds
    "torch==2.2.2",
    "spacy==3.7.4",
    "scikit-learn==1.4.2",
    "sentence-transformers==2.7.0",
    "numpy==1.26.4",

    # HTTP client (healthcheck, inter-service)
    "httpx==0.27.0",

    # Logging
    "structlog==24.1.0",
]

[project.optional-dependencies]
prod = []
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "httpx==0.27.0",
    "fakeredis[aioredis]==2.23.2",
    "ruff==0.4.4",
    "black==24.4.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]
